kubernetes/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: attalos-bardin-haus-web
  labels:
spec:
  type: ClusterIP
  ports:
  - port: 3001
    protocol: TCP
  selector:
    name: attalos
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: attalos-bardin-haus-chat
#  labels:
#spec:
#  type: ClusterIP
#  ports:
#  - port: 5100
#    protocol: TCP
#  selector:
#    name: attalos
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: attalos-bardin-haus-bosh
#  labels:
#spec:
#  type: ClusterIP
#  ports:
#  - port: 5200
#    protocol: TCP
#  selector:
#    name: attalos
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: attalos-bardin-haus-vhost
  labels:
spec:
  rules:
  - host: attalos.bardin.haus
    http:
      paths:
      - backend:
          serviceName: attalos-bardin-haus-web
          servicePort: 3001
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: attalos-bosh-bardin-haus-vhost
#  labels:
#spec:
#  rules:
#  - host: attalos-bosh.bardin.haus
#    http:
#      paths:
#      - backend:
#          serviceName: attalos-bardin-haus-bosh
#          servicePort: 5200
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: attalos
  labels:
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  replicas: 1
  template:
    metadata:
      labels:
        name: attalos
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 5
      containers:
      - name: attalos-bardin-haus-web
        image: -placeholder-
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: 100Mi
            cpu: 20m
        command:
        - nodejs
        - web.js
